Remove Bangers font. Display code with examples. Update typography styles.

--- a/content/collections/posts/2020-01-13.using-css-transitions-with-tailwindcss-1-2.md
+++ b/content/collections/posts/2020-01-13.using-css-transitions-with-tailwindcss-1-2.md
@@ -85,6 +85,7 @@ content:
       values:
         type: example
         example_content: '<button class="inline-block opacity-50 hover:opacity-100 transition-opacity duration-1000 ease-out bg-red-500 text-white p-2 rounded">Hover me to see the transition<button>'
+        show_example: true
   -
     type: paragraph
   -
