--- a/content/collections/posts/2020-01-15.using-css-transforms-with-tailwindcss-v1-2.md
+++ b/content/collections/posts/2020-01-15.using-css-transforms-with-tailwindcss-v1-2.md
@@ -52,6 +52,7 @@ content:
             <div class="inline-block transform rotate-45">Rotated</div>
           </div>
           <div class="transform translate-x-1/2">Translated</div>
+        show_example: true
   -
     type: paragraph
     content:
@@ -81,6 +82,7 @@ content:
             <div class="inline-block p-2 bg-red-500 text-white transform rotate-45 hover:-rotate-45 transition-transform duration-1000 ease-out">Hover me to rotate!</div>
           </div>
           <div class="ml-8 inline-block transform hover:translate-x-1/2 transition-transform duration-1000 ease-out">Hover me to slide!</div>
+        show_example: true
   -
     type: paragraph
     content:
