Misc style changes, example fix

--- a/content/collections/posts/2020-01-13.using-css-transitions-with-tailwindcss-1-2.md
+++ b/content/collections/posts/2020-01-13.using-css-transitions-with-tailwindcss-1-2.md
@@ -83,11 +83,10 @@ content:
     type: set
     attrs:
       values:
-        type: gist_content
-        gist_id: b9f1fef42a2cc2275b0214ac699fb4d5
-        gist_filename: 5ec33c88579e5.html
-        code: '<button class="inline-block opacity-50 hover:opacity-100 transition-opacity duration-1000 ease-out bg-red-500 text-white p-2 rounded">Hover me to see the transition<button>'
-        extension: html
+        type: example
+        example_content: |
+          <button class="inline-block opacity-50 hover:opacity-100 transition-opacity duration-1000 ease-out bg-red-500 text-white p-2 rounded">Hover me to see the transition<button>
+        show_example: true
   -
     type: heading
     attrs:
