feat: Style updates, layout updates

--- a/content/collections/posts/2020-01-15.building-css-grids-in-tailwindcss-v1-2.md
+++ b/content/collections/posts/2020-01-15.building-css-grids-in-tailwindcss-v1-2.md
@@ -20,11 +20,11 @@ content:
         type: example
         example_content: |
           <div class="grid grid-cols-2 lg:grid-cols-4 gap-6 w-full">
-            <div class="col-span-1 bg-red-500">Row 1, Column 1</div>
+            <div class="col-span-1 bg-red">Row 1, Column 1</div>
             <div class="col-span-2 bg-blue-500">Row 1, Column 2, Span 2</div>
             <div class="col-start-1 col-end-2 lg:col-start-2 lg:col-end-4 bg-green-500">Row 2, Start 2, End 4</div>
             <div class="col-start-1 col-end-2 lg:col-end-4 bg-blue-500">Row 3, Start 1, End 4</div>
-            <div class="col-start-2 col-end-2 lg:col-end-5 bg-red-500">Row 4, Start 2, End 5</div>
+            <div class="col-start-2 col-end-2 lg:col-end-5 bg-red">Row 4, Start 2, End 5</div>
           </div>
         show_example: true
   -
@@ -38,11 +38,11 @@ content:
         gist_filename: 5ec33da2bce87.html
         code: |
           <div class="grid grid-cols-2 lg:grid-cols-4 gap-6 w-full">
-            <div class="col-span-1 bg-red-500">Row 1, Column 1</div>
+            <div class="col-span-1 bg-red">Row 1, Column 1</div>
             <div class="col-span-2 bg-blue-500">Row 1, Column 2, Span 2</div>
             <div class="col-start-1 col-end-2 lg:col-start-2 lg:col-end-4 bg-green-500">Row 2, Start 2, End 4</div>
             <div class="col-start-1 col-end-2 lg:col-end-4 bg-blue-500">Row 3, Start 1, End 4</div>
-            <div class="col-start-2 col-end-2 lg:col-end-5 bg-red-500">Row 4, Start 2, End 5</div>
+            <div class="col-start-2 col-end-2 lg:col-end-5 bg-red">Row 4, Start 2, End 5</div>
           </div>
         extension: html
   -
