--- a/content/collections/posts/2020-01-15.using-css-transforms-with-tailwindcss-v1-2.md
+++ b/content/collections/posts/2020-01-15.using-css-transforms-with-tailwindcss-v1-2.md
@@ -96,7 +96,7 @@ content:
         type: example
         example_content: |
           <div class="inline-block py-12">
-            <div class="inline-block p-2 bg-red-500 text-white transform rotate-45 hover:-rotate-45 transition-transform duration-1000 ease-out">Hover me to rotate!</div>
+            <div class="inline-block p-2 bg-red text-white transform rotate-45 hover:-rotate-45 transition-transform duration-1000 ease-out">Hover me to rotate!</div>
           </div>
           <div class="ml-8 inline-block transform hover:translate-x-1/2 transition-transform duration-1000 ease-out">Hover me to slide!</div>
         show_example: true
@@ -109,7 +109,7 @@ content:
         gist_filename: 5ec33e4cacefb.html
         code: |
           <div class="inline-block py-12">
-            <div class="inline-block p-2 bg-red-500 text-white transform rotate-45 hover:-rotate-45 transition-transform duration-1000 ease-out">Hover me to rotate!</div>
+            <div class="inline-block p-2 bg-red text-white transform rotate-45 hover:-rotate-45 transition-transform duration-1000 ease-out">Hover me to rotate!</div>
           </div>
           <div class="ml-8 inline-block transform hover:translate-x-1/2 transition-transform duration-1000 ease-out">Hover me to slide!</div>
         extension: html
