fix: Update goals post, add redirect to goals post

--- a/content/collections/posts/2021-01-01.goals-for-2021.md
+++ b/content/collections/posts/2021-01-01.goals-for-2021.md
@@ -532,7 +532,7 @@ content:
     content:
       -
         type: text
-        text: 'I currently average around 200 views per day on my YouTube channel. I would like to increase my content library and get my average views per day up to 1,000. '
+        text: 'I currently average around 200 views per day on my YouTube channel. I would like to increase my content library and get my average daily views up to 1,000. '
   -
     type: paragraph
     content:
@@ -582,7 +582,7 @@ content:
             content:
               -
                 type: text
-                text: 'Livestream at least once per month. Although they may not be good for generating page views, livestreams can be good for increasing Watch Time.'
+                text: 'Livestream at least once per month. Although they may not be good for generating page views, livestreams can be good for increasing watch time.'
   -
     type: heading
     attrs:
@@ -596,7 +596,7 @@ content:
     content:
       -
         type: text
-        text: 'To reach 1,000 page views by the end of the year, I will need to increase my page views by 50% each quarter. This is a lofty goal, but I''m hoping YouTube''s recommendation algorithm can help me out here. The algorithm uses Watch Time and CTR (Click Through Rate) to indicate a video''s performance, and therefore recommend that video to more users.'
+        text: 'To reach 1,000 daily views by the end of the year, I will need to increase my daily views by 50% each quarter. This is a lofty goal, but I''m hoping YouTube''s recommendation algorithm can help me out here. The algorithm uses Watch Time and CTR (Click Through Rate) to indicate a video''s performance, and therefore recommend that video to more users.'
   -
     type: bullet_list
     content:
@@ -608,7 +608,7 @@ content:
             content:
               -
                 type: text
-                text: 'March 31: ~300 unique page views, 50% increase'
+                text: 'March 31: ~300 unique daily views, 50% increase'
       -
         type: list_item
         content:
@@ -617,7 +617,7 @@ content:
             content:
               -
                 type: text
-                text: 'June 30: ~450 unique page views, 50% increase'
+                text: 'June 30: ~450 unique daily views, 50% increase'
       -
         type: list_item
         content:
@@ -626,7 +626,7 @@ content:
             content:
               -
                 type: text
-                text: 'September 30: ~675 unique page views, 50% increase'
+                text: 'September 30: ~675 unique daily views, 50% increase'
       -
         type: list_item
         content:
@@ -635,7 +635,7 @@ content:
             content:
               -
                 type: text
-                text: 'December 31: ~1,012 unique page views, 50% increase'
+                text: 'December 31: ~1,012 unique daily views, 50% increase'
   -
     type: heading
     attrs:
@@ -726,7 +726,7 @@ content:
             content:
               -
                 type: text
-                text: 'Grow my YouTube channel to 1,000 views per day and 10,000 subscribers'
+                text: 'Grow my YouTube channel to 1,000 daily views and 10,000 subscribers'
       -
         type: list_item
         content:
