feat: Add encapsulated state to post

--- a/content/collections/posts/2021-02-10.why-you-should-be-using-react-context-more-often.md
+++ b/content/collections/posts/2021-02-10.why-you-should-be-using-react-context-more-often.md
@@ -1,7 +1,7 @@
 ---
 title: 'Why you should be using React Context more often'
 category: react
-excerpt: 'When people think of context in a React JS app, they often think of global state. "I need to manage the theme my app is set to use, I can use context for this." While this isn''t wrong, context can be used for so much more than that use case.'
+excerpt: 'React Context can be more than just global state in an app. I like to think of Context as "encapsulated state".'
 updated_by: 197c1509-8dff-4d72-9898-334084519619
 updated_at: 1612986959
 id: 4a15e083-f753-41a8-966f-9eec3cbf87ef
@@ -11,7 +11,7 @@ content:
     content:
       -
         type: text
-        text: 'When people think of context in a React JS app, they often think of global state. "I need to manage the theme my app is set to use, I can use context for this." While this isn''t wrong, context can be used for so much more than that use case.'
+        text: 'When people think of context in a React JS app, they often think of global state. "I need to manage the theme my app is set to use, I can use context for this." While this isn''t wrong, context can be used for so much more than that use case. I like to think of it as "encapsulated state".'
   -
     type: paragraph
     content:
