fix: Fix @inertiajs/inertia-vue typo

--- a/content/collections/posts/2021-02-21.replacing-laravel-mix-with-vite.md
+++ b/content/collections/posts/2021-02-21.replacing-laravel-mix-with-vite.md
@@ -219,7 +219,7 @@ content:
               include: [
                 'vue',
                 '@inertiajs/inertia',
-                '@inertiajs/inertia-vue',
+                '@inertiajs/inertia-vue3',
                 '@inertiajs/progress',
                 'axios'
               ]
