--- a/content/collections/posts/2021-06-11.wherehasall-functionality-in-laravel.md
+++ b/content/collections/posts/2021-06-11.wherehasall-functionality-in-laravel.md
@@ -1,7 +1,7 @@
 ---
 id: c125d72e-d015-411a-83bc-de9fd3d1be39
 blueprint: post
-title: 'Where Has All functionality in Laravel'
+title: '"Where Has All" functionality in Laravel'
 category: laravel
 excerpt: 'Laravel doesn''t have a `whereHasAll` method built in, but here''s how you can replicate it yourself.'
 updated_by: e66e4073-3959-461b-aaf2-e7b565a7a341
