Update brand colors

--- a/content/collections/posts/2020-12-13.adding-dark-mode-support-to-a-tailwind-website.md
+++ b/content/collections/posts/2020-12-13.adding-dark-mode-support-to-a-tailwind-website.md
@@ -55,7 +55,7 @@ content:
     attrs:
       values:
         type: example
-        example_content: '<button class="p-2 rounded bg-dark text-light dark:bg-light dark:text-dark">This button will swap colors when dark mode is enabled</button>'
+        example_content: '<button class="p-2 rounded bg-brand-dark text-brand-light dark:bg-brand-light dark:text-brand-dark">This button will swap colors when dark mode is enabled</button>'
   -
     type: paragraph
     content:
